method channel procces

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -37,6 +37,16 @@ android {
         targetSdkVersion 31
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    buildFeatures {
+        viewBinding true
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
 dependencies {
@@ -47,4 +57,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     api 'com.github.davidmigloz:opencv-android-gradle-repo:3.3.0'
     implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 }
